--- a/Lab1-std/Lab_1_std.ipynb
+++ b/Lab1-std/Lab_1_std.ipynb
@@ -360,7 +360,7 @@
    ],
    "source": [
     "#2: Draw a grey-scale image that has uniform histogram\n",
-    "# same number of pixels for all intensity levels) using code only. Let the size of the image be 256x256.\n",
+    "# same number of pixels for all intensity levels using code only. Let the size of the image be 256x256.\n",
     "# use np.ones to draw image with ones.\n",
     "img_size = (256, 256)\n",
     "def uniform_histogram_image(size):\n",
