--- a/Lab1-std/Lab_1_std.ipynb
+++ b/Lab1-std/Lab_1_std.ipynb
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -333,6 +333,7 @@
     "ex2 = io.imread('./histogram/ex2.png', as_gray=True)\n",
     "ex3 = io.imread('./histogram/ex3.png', as_gray=True)\n",
     "show_images([ex1,ex2,ex3],['ex1','ex2','ex3'])\n",
+    "\n",
     "# plot_histogram(ex1, nbins=256)\n",
     "# plot_histogram(ex2, nbins=256)\n",
     "# plot_histogram(ex3, nbins=256)\n",
@@ -340,6 +341,7 @@
     "showHistosinRow([ex1, ex2, ex3], ['ex1', 'ex2', 'ex3'], 64)\n",
     "showHistosinRow([ex1, ex2, ex3], ['ex1', 'ex2', 'ex3'], 8)\n",
     "# nbins manages the number of bins (groups or classes) in the histogram.\n",
+    "# increasing it will make the histogram more detailed and vice versa.\n",
     "\n",
     "\n",
     "\n",
