--- a/Lab1-std/Lab_1_std.ipynb
+++ b/Lab1-std/Lab_1_std.ipynb
@@ -422,12 +422,8 @@
    ],
    "source": [
     "'''\n",
-    "The image that won't be greatly affected by the noise filter is the one below,\n",
-    "it's very random and has a huge varity of greyscale colors as displayed in the histogram below,\n",
-    "therfore the naked eye cannot differentiate between the image and the noise\n",
-    "-------------\n",
     "it has many white spots so the noise (salt) won't be very noticable if its added to these spots\n",
-    " \n",
+    "some pixels might be black but as the image have some grey colors , those blacks would just join\n",
     "'''\n",
     "image1 = io.imread('./histogram/ex1.jpg')\n",
     "# image2 = io.imread('./hsv/ex2.jpg')\n",
