--- a/Lab1-std/Lab_1_std.ipynb
+++ b/Lab1-std/Lab_1_std.ipynb
@@ -423,7 +423,7 @@
    "source": [
     "'''\n",
     "it has many white spots so the noise (salt) won't be very noticable if its added to these spots\n",
-    "some pixels might be black but as the image have some grey colors , those blacks would just join\n",
+    "some pixels might be black but as the image have some grey colors , those blacks would just join in between\n",
     "'''\n",
     "image1 = io.imread('./histogram/ex1.jpg')\n",
     "# image2 = io.imread('./hsv/ex2.jpg')\n",
