--- a/Lab 9/lab_texture_STD.ipynb
+++ b/Lab 9/lab_texture_STD.ipynb
@@ -197,8 +197,6 @@
     "    img = image.copy()\n",
     "    patch_height = patch_width = 50\n",
     "    \n",
-    "    # TODO complete the following skeleton\n",
-    "    \n",
     "    # loop on the image patch by patch\n",
     "    for i in range(0, img.shape[0], patch_height):\n",
     "        for j in range(0, img.shape[1], patch_width):\n",
@@ -273,9 +271,7 @@
     "    for i in range(8):\n",
     "        if arr[i] >= center_value:\n",
     "            byte += 2**i\n",
-    "    # write the upper loop in a more pythonic way\n",
     "    return byte\n",
-    "        \n",
     "\n",
     "def get_lbp_hist(grayscale_img):\n",
     "    lpm = np.zeros((grayscale_img.shape[0] - 2, grayscale_img.shape[1] - 2))\n",
@@ -284,17 +280,8 @@
     "            window = grayscale_img[i-1:i+2, j-1:j+2]\n",
     "            lpm[i-1, j-1] = get_lpb_byte(window)\n",
     "    hist, _ = np.histogram(lpm, bins=256, range=(0, 256))\n",
-    "    return hist\n",
-    "    # return <LBP histogram which is a list of 256 numbers>\n",
-    "# get_lbp_hist((rgb2gray(io.imread(r'imgs_patches\\jeans1.jpg')) * 255).astype(np.uint8))"
+    "    return hist\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -354,16 +341,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# img = rgb2gray(io.imread(r'imgs_patches\\cotton1.jpg'))\n",
-    "# io.imshow(img, cmap='gray')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
    "outputs": [
@@ -389,7 +366,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -403,11 +380,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.7 (tags/v3.10.7:6cc6b13, Sep  5 2022, 14:08:36) [MSC v.1933 64 bit (AMD64)]"
   },
   "vscode": {
    "interpreter": {
-    "hash": "259b4fef693b2d75168774e41cff93a193031b347008aedd7a32d46d0530600c"
+    "hash": "369f2c481f4da34e4445cda3fffd2e751bd1c4d706f27375911949ba6bb62e1c"
    }
   }
  },
